Fix missing changes from last merge...

--- a/www/html/index.html
+++ b/www/html/index.html
@@ -66,9 +66,6 @@
                 >
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#team">Team</a>
-              </li>
-              <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#news">News</a>
               </li>
               <li class="nav-item">
@@ -90,7 +87,7 @@
         data-multibackground-layer-0-type="youtube"
         data-multibackground-layer-0-attachment="parallax"
         data-multibackground-layer-0-parallaxspeed="-1.0"
-        data-multibackground-layer-0-id="QXP0wv1nInI"
+        data-multibackground-layer-0-id="1FnGkJtQJDY"
       >
         <div class="bg-alpha5-black bg-overlay position-absolute"></div>
         <div class="container position-relative">
@@ -137,10 +134,6 @@
               </li>
             </ul>
           </div>
-          <!-- Video -->
-          <div class="col-lg-6">
-            <div data-type="youtube" data-video-id="nbmJnCHXaW8"></div>
-          </div>
         </div>
       </div>
     </section>
@@ -166,11 +159,6 @@
                     </p>
                     <a href="https://crex24.com/exchange/XLN-BTC">
                       <img src="assets/img/icon/crex24.png" width="80" />
-                    </a>
-                    <a
-                      href="https://wallet.escodex.com/market/ESCODEX.XLN_ESCODEX.BTC"
-                    >
-                      <img src="assets/img/icon/escodex.png" width="80" />
                     </a>
                   </div>
                 </div>
@@ -478,31 +466,19 @@
                   <h2>
                     <a href="#">Fix any outstanding bugs, stabilize code.</a>
                   </h2>
-                  <span>On Going</span>
+                  <span>In Progress</span>
                 </div>
               </div>
             </article>
 
             <article class="timeline-entry">
               <div class="timeline-entry-inner">
-                <div class="timeline-icon bg-secondary">
-                  <i class="entypo-feather"></i>
-                </div>
-                <div class="timeline-label">
-                  <h2><a href="#">Wallet: Create Masternode button</a></h2>
-                  <span>Q4 2018</span>
-                </div>
-              </div>
-            </article>
-
-            <article class="timeline-entry">
-              <div class="timeline-entry-inner">
-                <div class="timeline-icon bg-secondary">
+                <div class="timeline-icon bg-warning">
                   <i class="entypo-suitcase"></i>
                 </div>
                 <div class="timeline-label">
                   <h2><a href="#">Whitepaper publication</a></h2>
-                  <span>Q1 2019</span>
+                  <span>In Progress</span>
                 </div>
               </div>
             </article>
@@ -514,7 +490,7 @@
                 </div>
                 <div class="timeline-label">
                   <h2><a href="#">.deb package for Ubuntu Linux</a></h2>
-                  <span>Q1 2019</span>
+                  <span>Q1 2022</span>
                 </div>
               </div>
             </article>
@@ -531,7 +507,7 @@
                       selection criteria</a
                     >
                   </h2>
-                  <span>Q1 2019</span>
+                  <span>Q1 2022</span>
                 </div>
               </div>
             </article>
@@ -545,7 +521,7 @@
                   <h2>
                     <a href="#">Add support for hot MasterNodes on Windows</a>
                   </h2>
-                  <span>Q1 2019</span>
+                  <span>Q2 2022</span>
                 </div>
               </div>
             </article>
@@ -557,7 +533,7 @@
                 </div>
                 <div class="timeline-label">
                   <h2><a href="#">Wallet: Proposal Tab</a></h2>
-                  <span>Q1 2019</span>
+                  <span>Q2 2022</span>
                 </div>
               </div>
             </article>
@@ -568,20 +544,8 @@
                   <i class="entypo-suitcase"></i>
                 </div>
                 <div class="timeline-label">
-                  <h2><a href="#">Fix multi-signature functionality</a></h2>
-                  <span>Q1 2019</span>
-                </div>
-              </div>
-            </article>
-
-            <article class="timeline-entry">
-              <div class="timeline-entry-inner">
-                <div class="timeline-icon bg-secondary">
-                  <i class="entypo-suitcase"></i>
-                </div>
-                <div class="timeline-label">
-                  <h2><a href="#">Support for Ubuntu 18.04 LTS</a></h2>
-                  <span>Q1 2019</span>
+                  <h2><a href="#">Fixed and Improved multi-signature functionality</a></h2>
+                  <span>Q3 2022</span>
                 </div>
               </div>
             </article>
@@ -593,9 +557,9 @@
                 </div>
                 <div class="timeline-label">
                   <h2>
-                    <a href="#">Further exchange listings (now on EscoDex!)</a>
+                    <a href="#">Further exchange listings</a>
                   </h2>
-                  <span>Q1 2019 - On Going</span>
+                  <span>In Progress</span>
                 </div>
               </div>
             </article>
@@ -607,7 +571,7 @@
                 </div>
                 <div class="timeline-label">
                   <h2><a href="#">CoinMarketCap listing</a></h2>
-                  <span>Q2 2019 - On Going</span>
+                  <span>In Progress</span>
                 </div>
               </div>
             </article>
@@ -619,7 +583,7 @@
                 </div>
                 <div class="timeline-label">
                   <h2><a href="#">Fix budget proposal payments</a></h2>
-                  <span>Q2 2019</span>
+                  <span>Q3 2022</span>
                 </div>
               </div>
             </article>
@@ -635,19 +599,7 @@
                       >Change consensus to use secp256k1 instead of OpenSSL</a
                     >
                   </h2>
-                  <span>Q2 2019</span>
-                </div>
-              </div>
-            </article>
-
-            <article class="timeline-entry">
-              <div class="timeline-entry-inner">
-                <div class="timeline-icon bg-secondary">
-                  <i class="entypo-suitcase"></i>
-                </div>
-                <div class="timeline-label">
-                  <h2><a href="#">Ledger Wallet support</a></h2>
-                  <span>Q3 2019</span>
+                  <span>Q3 2022</span>
                 </div>
               </div>
             </article>
@@ -659,7 +611,7 @@
                 </div>
                 <div class="timeline-label">
                   <h2><a href="#">Payment Gateway</a></h2>
-                  <span>Q3 2019</span>
+                  <span>Q4 2022</span>
                 </div>
               </div>
             </article>
@@ -673,10 +625,10 @@
                   <h2>
                     <a href="#">
                       IoT device wallets (such as Android TV, Raspberry Pi) with
-                      support for staking</a
+                      support for (headless) staking</a
                     >
                   </h2>
-                  <span>Q3 2019</span>
+                  <span>Q4 2021 / Q1 2022</span>
                 </div>
               </div>
             </article>
@@ -688,7 +640,7 @@
                 </div>
                 <div class="timeline-label">
                   <h2><a href="#">Web Wallet</a></h2>
-                  <span>Q3 2019</span>
+                  <span>Q4 2021 / Q1 2022</span>
                 </div>
               </div>
             </article>
@@ -700,7 +652,7 @@
                 </div>
                 <div class="timeline-label">
                   <h2><a href="#">Mobile Wallets</a></h2>
-                  <span>Q4 2019</span>
+                  <span>Q1 2022</span>
                 </div>
               </div>
             </article>
@@ -714,7 +666,7 @@
                   <h2>
                     <a href="#">Decentralized peer to peer wallet trading</a>
                   </h2>
-                  <span>Q1 2020</span>
+                  <span>Q1 2022</span>
                 </div>
               </div>
             </article>
@@ -760,40 +712,9 @@
                 </a>
               </div>
               <div class="col" align="center">
-                <a href="https://dice-age.com">
+                <a href="https://www.masternodes.biz/cryptocurrency/XLN">
                   <img
-                    src="assets/img/icon/partners/dice-age80x80.png"
-                    height="80"
-                  />
-                </a>
-              </div>
-              <div class="w-100"></div>
-            </div>
-            <br>
-            <br>
-            <div class="row">
-              <div class="col" align="center">
-                <a href="https://nodemarketcap.com/coin/lunarium/">
-                  <img
-                    src="assets/img/icon/partners/nodemarketcaplogowhite.png"
-                    height="80"
-                  />
-                </a>
-              </div>
-              <div class="col" align="center">
-                <a
-                  href="http://tradersgateway.net/currencies/LUNARIUM/Lunarium.html"
-                >
-                  <img
-                    src="assets/img/icon/partners/trader_gateway.png"
-                    height="80"
-                  />
-                </a>
-              </div>
-              <div class="col" align="center">
-                <a href="https://masternodes.online/currencies/XLN">
-                  <img
-                    src="assets/img/icon/partners/logo_mno.png"
+                    src="assets/img/icon/partners/masternodes_biz.png"
                     height="80"
                   />
                 </a>
@@ -805,104 +726,7 @@
       </div>
     </section>
 
-    <!-- Team -->
-    <section id="team" class="py-150px bg-gray-900">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-12">
-            <div class="heading-st-3 text-center mb-40px">
-              <h2 class="text-white">The Team</h2>
-            </div>
-          </div>
-          <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-            <img src="assets/img/esavard.jpeg" alt="" class="mb-30px rd-5" />
-            <h3 class="mb-0 text-white">esavard</h3>
-            <a class="fa fa-github" href="https://github.com/esavard"></a>
-            <a
-              class="fa fa-linkedin"
-              href="https://www.linkedin.com/in/esavard/"
-            ></a>
-            <br />
-            <span class="text-first-color fs-0_9 text-uppercase"
-              >Developer</span
-            >
-            <p class="mb-0 mt-20px">
-              Learned to program a long long time ago, when computers with 16K
-              of RAM were a luxury...
-            </p>
-          </div>
-          <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-            <img src="assets/img/jackk.jpg" alt="" class="mb-30px rd-5" />
-            <h3 class="mb-0 text-white">Jackk</h3>
-            <a class="fa fa-github" href="https://github.com/jackkdev"></a>
-            <br />
-            <span class="text-first-color fs-0_9 text-uppercase"
-              >Developer & Blockchain advisor</span
-            >
-            <p class="mb-0 mt-20px">
-              Blockchains are presky little beasts that can be tricky. Our
-              expert is here to make sure Lunarium blockchain is running
-              smoothly.
-            </p>
-            <br />
-          </div>
-
-          <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-            <img src="assets/img/honeybadger.jpg" alt="" class="mb-30px rd-5" />
-            <h3 class="mb-0 text-white">HoneyBadger (The Real)</h3>
-            <span class="text-first-color fs-0_9 text-uppercase"
-              >Peace Keeper</span
-            >
-            <p class="mb-0 mt-20px">
-              HoneyBadger is the guardian of our Community, and a determined QA
-              tester. Without the
-              <i>'Badger</i>, it will be more chaotic around here. He's cool as
-              long you don't mess with him...
-            </p>
-          </div>
-          <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-            <img
-              src="assets/img/bitcoinminion.jpeg"
-              alt=""
-              class="mb-30px rd-5"
-            />
-            <h3 class="mb-0 text-white">Bitcoinminion</h3>
-            <span class="text-first-color fs-0_9 text-uppercase"
-              >Crypto Specialist</span
-            >
-            <p class="mb-0 mt-20px">
-              Bitcoinminion is our crypto specialist. He is an active
-              contributor of a few existing altcoin, and an invaluable advisor
-              for the Lunarium project.
-            </p>
-          </div>
-          <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-            <img src="assets/img/flong.jpeg" alt="" class="mb-30px rd-5" />
-            <h3 class="mb-0 text-white">Flong</h3>
-            <span class="text-first-color fs-0_9 text-uppercase"
-              >Technical Support & Advisor</span
-            >
-            <p class="mb-0 mt-20px">
-              Flong is our king of staking, and he will help you with your
-              wallet, wherever you decide to run it: Windows, Linux, or even on
-              a Raspberry Pi.
-            </p>
-          </div>
-          <div class="col-lg-4 mb-md-30px mb-sm-30px mb-xs-30px">
-            <img src="assets/img/z3ricz.jpeg" alt="" class="mb-30px rd-5" />
-            <h3 class="mb-0 text-white">Z3ricz</h3>
-            <span class="text-first-color fs-0_9 text-uppercase"
-              >Technical support & crypto enthusiastic</span
-            >
-            <p class="mb-0 mt-20px">
-              Do you have a problem with your Masternode, are you wondering what
-              to mine next with your (power-hungry) mining rigs, or would like
-              to chat about future crypto investments? Z3ricz is your best bet.
-            </p>
-          </div>
-        </div>
-      </div>
-    </section>
+    <!-- Team : TODO -->
 
     <!-- News -->
     <section id="news" class="py-150px bg-gray-200" style="text-align: center">
@@ -1009,7 +833,7 @@
         <div class="row">
           <div class="col-lg-4 mb-md-40px mb-sm-40px mb-xs-40px">
             <span class="fs-0_9"
-              >All Rights Reserved 2018 @ The Lunarium Team</span
+              >All Rights Reserved 2021 @ The Lunarium Team</span
             >
           </div>
         </div>
