--- a/www/html/index.html
+++ b/www/html/index.html
@@ -46,9 +46,10 @@
                 <a class="nav-link js-scroll-trigger" href="#about">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#getting-started"
-                  >Getting Started</a
-                >
+                <a class="nav-link js-scroll-trigger" href="#getting-started">Getting Started</a>
+              <li class="nav-item">
+                  <a class="nav-link js-scroll-trigger" href="#features">Features</a>
+              </li>                
               </li>
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#roadmap"
@@ -58,11 +59,6 @@
               <li class="nav-item">
                 <a class="nav-link js-scroll-trigger" href="#partnerships"
                   >Partnerships</a
-                >
-              </li>
-              <li class="nav-item">
-                <a class="nav-link js-scroll-trigger" href="#features"
-                  >Features</a
                 >
               </li>
               <li class="nav-item">
@@ -223,7 +219,7 @@
     </section>
 
     <!-- NEW FEATURES!!! -->
-    <section class="py-150px bg-gray-900" id="getting-started">
+    <section class="py-150px bg-gray-900" id="features">
       <div class="container">
         <div class="row">
           <div class="col-lg-12">
